--- a/!SoftUniFAQSystem/SoftUniFAQSystem.Data/SoftUniFAQSystem.Data.csproj
+++ b/!SoftUniFAQSystem/SoftUniFAQSystem.Data/SoftUniFAQSystem.Data.csproj
@@ -57,15 +57,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
-    <Compile Include="SoftUniFaqSystemData.cs" />
-    <Compile Include="ISoftUniFAQSystemData.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Contracts\IUsersRepository.cs" />
+    <Compile Include="SoftUniFaqSystemData.cs" />
+    <Compile Include="Contracts\ISoftUniFAQSystemData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AnswersRepository.cs" />
     <Compile Include="Repositories\UsersRepository.cs" />
     <Compile Include="Repositories\QuestionsRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
-    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Contracts\IRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -77,7 +78,6 @@
       <Name>SoftUniFAQSystem.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
