--- a/!SoftUniFAQSystem/SoftUniFAQSystem.Web/SoftUniFAQSystem.Web.csproj
+++ b/!SoftUniFAQSystem/SoftUniFAQSystem.Web/SoftUniFAQSystem.Web.csproj
@@ -201,15 +201,19 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AnswerController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="Models\UserBindingModel.cs" />
+    <Compile Include="Models\Answers\AnswerBindingModels.cs" />
+    <Compile Include="Models\Answers\AnswerDataModel.cs" />
+    <Compile Include="Models\Users\UserBindingModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Users\UserDataModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
