--- a/SoftUniFAQSystem.Web/SoftUniFAQSystem.Web.csproj
+++ b/SoftUniFAQSystem.Web/SoftUniFAQSystem.Web.csproj
@@ -200,13 +200,17 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AnswerController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\QuestionsController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Models\Answers\AnswerBindingModels.cs" />
     <Compile Include="Models\Answers\AnswerDataModel.cs" />
+    <Compile Include="Models\Questions\QuestionBindingModel.cs" />
+    <Compile Include="Models\Questions\QuestionDataModel.cs" />
     <Compile Include="Models\Users\UserBindingModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
