--- a/SoftUniFAQSystem.Web/Web.config
+++ b/SoftUniFAQSystem.Web/Web.config
@@ -18,12 +18,13 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-    <!--<httpProtocol>
+    <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
         <add name="Access-Control-Allow-Methods" value="GET, POST, OPTIONS, PUT, DELETE" />
       </customHeaders>
-    </httpProtocol>-->
+    </httpProtocol>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
